--- a/src/views/Acolhimento.form
+++ b/src/views/Acolhimento.form
@@ -840,6 +840,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Pesquisar Profiss&#xe3;o"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoPesquisarProfissaoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="campoProfissao">
           <Properties>
