Modificações no views
Views:
-JTabble só permite selecionar um elemento
-Pegando cbo E nome da profissao selecionada agora

--- a/src/views/Acolhimento.form
+++ b/src/views/Acolhimento.form
@@ -595,11 +595,11 @@
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Group type="102" alignment="1" attributes="0">
-                                          <Component id="campoProfissao" pref="221" max="32767" attributes="0"/>
-                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="campoProfissao" pref="227" max="32767" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
                                           <Component id="botaoPesquisarProfissao" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="campoEmpresa" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="campoEmpresa" alignment="1" pref="374" max="32767" attributes="0"/>
                                       <Component id="campoCBO" alignment="1" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
@@ -616,12 +616,10 @@
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Component id="labelTituloInformacoesProfissionaisPaciente" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="campoProfissao" alignment="0" min="-2" pref="28" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="labelProfisssao" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="botaoPesquisarProfissao" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="labelProfisssao" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="botaoPesquisarProfissao" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="campoProfissao" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -849,6 +847,9 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoProfissaoActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
