--- a/src/views/Acolhimento.form
+++ b/src/views/Acolhimento.form
@@ -594,13 +594,13 @@
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="campoEmpresa" alignment="1" pref="374" max="32767" attributes="0"/>
                                       <Group type="102" alignment="1" attributes="0">
-                                          <Component id="campoProfissao" pref="227" max="32767" attributes="0"/>
+                                          <Component id="campoCBO" max="32767" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="botaoPesquisarProfissao" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="campoEmpresa" alignment="1" pref="374" max="32767" attributes="0"/>
-                                      <Component id="campoCBO" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="campoProfissao" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -618,13 +618,15 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="labelProfisssao" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="botaoPesquisarProfissao" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="campoProfissao" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="labelCBO" min="-2" max="-2" attributes="0"/>
-                      <Component id="campoCBO" min="-2" pref="28" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="campoCBO" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                          <Component id="botaoPesquisarProfissao" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -691,6 +693,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="campoCBO">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
@@ -845,6 +848,9 @@
         <Component class="javax.swing.JTextField" name="campoProfissao">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="0" type="rgb"/>
+            </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
