Correções no views
Views:
-Validação ao clickar no botao selecionar sem ter selecionado nada
-Doubleclick na tabela de profissoes seleciona a profissao agora

--- a/src/views/PesquisaOcupacao.form
+++ b/src/views/PesquisaOcupacao.form
@@ -124,6 +124,7 @@
                 <Property name="text" type="java.lang.String" value="Selecionar"/>
               </Properties>
               <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botaoSelecionarProfissaoMouseClicked"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoSelecionarProfissaoActionPerformed"/>
               </Events>
             </Component>
@@ -174,6 +175,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableProfissoesMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
