--- a/src/views/Acolhimento.form
+++ b/src/views/Acolhimento.form
@@ -768,7 +768,7 @@
                 <StringItem index="5" value="Mercado Informal"/>
               </StringArray>
             </Property>
-            <Property name="name" type="java.lang.String" value="Rela&#xe7;&#xe3;o de Trabalho:" noResource="true"/>
+            <Property name="name" type="java.lang.String" value="Rela&#xe7;&#xe3;o de Trabalho" noResource="true"/>
           </Properties>
           <Events>
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="campoRelacaoTrabalhoItemStateChanged"/>
@@ -864,7 +864,7 @@
         <Component class="javax.swing.JTextField" name="campoOutroObjetivoConsulta">
           <Properties>
             <Property name="enabled" type="boolean" value="false"/>
-            <Property name="name" type="java.lang.String" value="campoOutroObjetivoConsulta" noResource="true"/>
+            <Property name="name" type="java.lang.String" value="outroObjetivoConsulta" noResource="true"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoOutroObjetivoConsultaActionPerformed"/>
